@@ -1,3 +1,8 @@
+2003-04-26	ujwal
+
+    * When changing colors, setting color scheme 
+      popup button value to "Custom".
+
 2003-04-25	ujwal
 
     * Fixed setting of tab position preference 
